# RobustTestTimeAdaptation

./: .gitignore  CITATION.cff  LICENSE  README.md  adapt_algorithm.py  adapt_presets.py  analyze_label_distributions.py  generate_adv_data.py  notes.txt  nuc_sweep.yaml  plot_label_stats.py  pyproject.toml  requirements.txt  show_adv_compare.py  svd_compare.py  sweep_adaptation.yaml  train.py  tst.py  tta-full.yml  unsupervise_adapt.py  unsupervised_adapt_dataset.py  visualize_fft_dataset_distribution.py  visualize_fft_feature_maps.py  visualize_fft_pipeline.py  visualize_safer_augmentations.py  wandb2tex.py
adv/: attacked_imagefolder.py
alg/: alg.py  modelopera.py  opt.py
datautil/: attacked_imagefolder.py  getdataloader.py
docs/: ECCV2026_SUPPLEMENTARY_REPRODUCIBILITY.md
label_dist_plots/: label_stats.csv  summary.json
network/: img_network.py  util.py
scripts/: analyze_label_distributions.py  bench_safer_overhead.py  compare_attack_runtime.py  launch_safer_final_sweeps.py  make_autoattack_table.py  make_qualitative_figure.py  plot_safer_views_scatter.py  plot_wandb_alpha_heatmap.py  plot_wandb_attack_rate_curve.py  plot_wandb_batch_acc_history.py  plot_wandb_eot_safer_attack.py  plot_wandb_eps_sweep.py  plot_wandb_param_curve.py  run_sweep_and_table.py  show_adv_compare.py  visualize_fft_dataset_distribution.py  visualize_fft_feature_maps.py  visualize_fft_pipeline.py  visualize_safer_augmentations.py  wandb_ablation_tables.py  wandb_alpha_mode_table.py  wandb_alpha_signal_table.py  wandb_compute_overhead_table.py  wandb_paper_tables.py  wandb_table.py  (+1 more)
(+255 files in other folders)
